# usbguard-applet-qt

./: .gitignore  CMakeLists.txt
src/: DeviceDialog.cpp  DeviceDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp  usbguard-applet-qt.qrc
src/translations/: README.md  cs_CZ.qm  cs_CZ.ts  de_DE.qm  de_DE.ts  es_AR.qm  es_AR.ts
